--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-dropzone-component": "^3.2.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.45.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
